--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="refresh" content="0; url=http://jeffbellegarde.github.io/jekyll/index.html" />
+    <title>renard</title>
+    <meta name="robots" content="noindex,follow" />
+  </head>
+  <body>
+    <p><a href="http://jeffbellegarde.github.io/jekyll/index.html">Redirection</a></p>
+  </body>
+</html>
