--- a/round.html
+++ b/round.html
@@ -1,14 +1,20 @@
+---
+---
 <!DOCTYPE html>
 <html>
   <head>
+    {% include head.html %}
+    
     <title>Show round</title>
     <link rel="stylesheet" type="text/css" href="jquery.svg.package-1.5.0/jquery.svg.css"> 
     <link rel="stylesheet" type="text/css" href="round.css"> 
   </head>
   <body>
+  
+    {% include header.html %}
+
     <div id="image_area"></div>
-    <div id="layer_controls">
-    </div>
+    <div id="layer_controls"></div>
     <div id="player_div"></div>
     <div id="fight_table" class="Table">
       <div class="Heading">
@@ -36,5 +42,8 @@
     <script type="text/javascript" src="jquery-3.3.1.js"></script>
     <script type="text/javascript" src="round.js"></script>
     <script type="text/javascript" src="jquery.svg.package-1.5.0/jquery.svg.js"></script>
-  </body>
+    
+    {% include footer.html %}
+  
+</body>
 </html>
